--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container-fluid mt-2">
+      <%= yield %>
+    </div>
   </body>
 </html>
